package model;

public enum Role {
    ADMIN , STANDAR
}
